# booking

./: .env-example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml
infra/: docker-compose.ci-test.yml  docker-compose.ci.yml  docker-compose.local-test.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
infra/commands/: api.sh  celery.sh  entrypoint-ci.sh
nginx/: Dockerfile  nginx.conf
src/: hotels.py  main.py  setup.py  storage.py
src/api/: __init__.py  hotels.py
src/api/dependecies/: __init__.py  auth.py  hotels.py  pagination.py  rooms.py  utils.py
src/api/v1/: __init__.py  auth.py  bookings.py  dependecies.py  facilities.py  hotels.py  images.py  rooms.py  utils.py
src/config/: __init__.py  config.py
src/connectors/: redis_connector.py
src/db/: __init__.py  database.py
src/db/mixins/: __init__.py  pk.py
src/exceptions/: auth.py  bookings.py  facilities.py  hotels.py  rooms.py
src/exceptions/api/: auth.py  bookings.py  facilities.py  hotels.py  rooms.py
src/exceptions/repository/: base.py  (+2 more)
src/migrations/: env.py
src/models/: bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/repositories/: base.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py  utils.py
src/schemas/: auth.py  base.py  bookings.py  facilities.py  hotels.py  pagination.py  rooms.py  users.py
src/services/: auth.py  bookings.py  facilities.py  hotels.py  jwt.py  media.py  rooms.py
src/tasks/: celery_conf.py  tasks.py  utils.py
src/utils/: auth.py  transaction.py
tests/: conftest.py  mock_facilities.json  mock_users.json  utils.py
tests/repository_tests/: test_bookings.py
(+30 files in other folders)
