[project]
name = "fastapi-learn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.0",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi[standard]>=0.115.12",
    "greenlet>=3.2.2",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "ruff>=0.11.12",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true