[project]
name = "fastapi-learn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.0",
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "black>=25.1.0",
    "celery>=5.5.3",
    "fastapi-cache2>=0.2.2",
    "fastapi[standard]>=0.115.12",
    "flower>=2.0.1",
    "greenlet>=3.2.2",
    "gunicorn>=23.0.0",
    "pillow>=11.2.1",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pyjwt[crypto]>=2.10.1",
    "pyright>=1.1.402",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "redis>=6.2.0",
    "ruff>=0.11.12",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]

[tool.ruff]
line-length = 88
exclude = [
    "src/migrations",
]

[tool.ruff.lint]
select = [
    "I",
    "F",
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.pyright]
include = [
    "src",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
